# l4d2-workshop-manager

./: LICENSE  README.md  package.json  vite.config.ts  vue.config.js
.github/workflows/: rust.yml
public/: splashscreen.html
src/: App.vue  main.js  main.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  config.rs  downloads.rs  logger.rs  main.rs  util.rs
src/components/: AddonModal.vue  AddonTags.vue  MenuItem.vue  Titlebar.vue
src/components/sections/: AddContent.vue  AddNew.vue  Managed.vue  SearchAdv.vue  Settings.vue  Unknown.vue  Unmanaged.vue  Updateable.vue  Workshop.vue  test.vue
src/js/: utils.js  utils.ts
