[package]
name = "l4d2-addon-manager"
version = "2.0.0"
description = "Manage l4d2 addons externally"
authors = ["jackz"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "window-unminimize", "window-unmaximize", "window-minimize", "window-start-dragging", "window-close", "window-maximize", "shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
steam-workshop-api = "0.4.1"
reqwest = { version = "0.11", features = ["json", "blocking", "stream"] }
dirs = "5.0.1"
futures = "0.3.15"
tinyfiledialogs = "3.0"
chrono = "0.4"
log = "0.4.22"
sourcepak = "0.3.0"
keyvalues-serde = "0.2.1"
regex = "1.10.5"
humantime = "2.1.0"
flexi_logger = "0.28"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
